# weechat-script-lint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ChangeLog.md  Makefile  README.md  REUSE.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/weechat_script_lint/: __init__.py  lint.py  script.py  utils.py
tests/: __init__.py  test_lint.py  test_main.py  test_script.py  test_utils.py
tests/scripts/: not_a_script.txt  script_all_errors.py  script_deprecated_hook_completion_get_string.py  script_deprecated_hook_completion_list_add.py  script_deprecated_irc_nick_color.py  script_deprecated_irc_nick_color_name.py  script_deprecated_with_condition_hook_completion_get_string.py  script_deprecated_with_condition_hook_completion_list_add.py  script_deprecated_with_condition_irc_nick_color.py  script_deprecated_with_condition_irc_nick_color_name.py  script_hook_process.py  script_hook_process_hashtable.py  script_hook_url.py  script_missing_email.py  script_missing_infolist_free.py  script_missing_spdx_copyright.py  script_missing_spdx_license.py  script_mixed_tabs_spaces.py  script_mixed_tabs_spaces_2.py  script_modifier_irc_in.py  script_python2_bin.py  script_signal_irc_out.py  script_signal_irc_outtags.py  script_sys_exit.py  script_unneeded_shebang.py  script_url_weechat.py  script_valid.py
tests/scripts/subdir/: script_valid.py
weechat_script_lint/: __init__.py  main.py  script.py  utils.py
